fixed margins on mobile, removed contact page

--- a/Frontend/src/components/projects/projects.css
+++ b/Frontend/src/components/projects/projects.css
@@ -26,7 +26,7 @@
     background-color: #7CF5FF;
     width: 100%;
     height: 100%;
-    margin-top: -3%;
+    margin-top: -5%;
     pointer-events: none; /* prevents anyone from dragging my images */
 }
 
@@ -54,7 +54,7 @@
 @media screen and (max-width: 600px) { /* when the width gets smaller, give a margin of 10% all around */
 
     .projectCard > h2 {
-        margin-top: 5%;
+        margin-top: 7%;
     }
 
     .projectCards {
@@ -79,6 +79,10 @@
         width: 80%;
         height: 10%;
         margin: 5%;
+    }
+
+    .container {
+        margin-top: -5%;
     }
 
 }
